--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <body>
     <h1>hello guys</h1>
     <p>jai hind</p>
+    <h1>This is mehulgithub</h1>
+    <h2>hello bro</h2>
   </body>
 </html>
